--- a/Components/PostCard.razor
+++ b/Components/PostCard.razor
@@ -1,6 +1,7 @@
 @namespace Contilog.Components
 @using Contilog.Models
 @using Microsoft.AspNetCore.Components.Forms
+@using Contilog.Components
 
 <div class="card post-card mb-3">
     <div class="card-body">
@@ -111,26 +112,15 @@
     </div>
 </div>
 
-<!-- Delete Confirmation Modal -->
-@if (showDeleteConfirmation)
-{
-    <div class="modal fade show d-block" tabindex="-1" style="background-color: rgba(0,0,0,0.5);">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Confirm Deletion</h5>
-                </div>
-                <div class="modal-body">
-                    <p>Are you sure you want to delete this post? This action cannot be undone.</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" @onclick="HideDeleteConfirmation">Cancel</button>
-                    <button type="button" class="btn btn-danger" @onclick="ConfirmDelete">Delete</button>
-                </div>
-            </div>
-        </div>
-    </div>
-}
+<ConfirmationDialog 
+    IsVisible="showDeleteConfirmation"
+    Title="Confirm Deletion"
+    Message="Are you sure you want to delete this post? This action cannot be undone."
+    ConfirmText="Delete"
+    CancelText="Cancel"
+    ConfirmButtonClass="btn-danger"
+    OnConfirmed="ConfirmDelete"
+    OnCancelled="HideDeleteConfirmation" />
 
 @code {
     [Parameter] public Post Post { get; set; } = new();
@@ -202,5 +192,6 @@
     {
         showDeleteConfirmation = false;
         await OnDeleteRequested.InvokeAsync(Post);
+        StateHasChanged();
     }
 }
