better icon for editing topics

--- a/Pages/Topics.razor
+++ b/Pages/Topics.razor
@@ -73,8 +73,8 @@ else
                         </TemplateColumn>
                         <TemplateColumn>
                             <div class="topics-action-cell">
-                                <button class="btn btn-sm btn-outline-primary me-1" @onclick="() => ViewPosts(context.Id)" title="View Posts">
-                                    <span class="oi oi-eye" aria-hidden="true"></span>
+                                <button class="btn btn-sm btn-outline-primary me-1" @onclick="() => ViewPosts(context.Id)" title="Write Posts">
+                                    <span class="oi oi-pencil" aria-hidden="true"></span>
                                 </button>
                                 @if (context.IsActive)
                                 {
